--- a/libsolv-sys/Cargo.toml
+++ b/libsolv-sys/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "libsolv-sys"
 description = "Raw libsolv bindings for Rust, used internally rust-libsolv"
-repository = "https://github.com/ignatenkobrain/libsolv-rs"
+repository = "https://github.com/Ultramarine-Linux/libsolv-rs"
 version = "0.0.1"
-edition = "2018"
-authors = ["Igor Gnatenko <ignatenko@redhat.com>", "Adam Baxter"]
+edition = "2021"
+authors = ["Igor Gnatenko <ignatenko@redhat.com>", "Adam Baxter", "Cappy Ishihara <cappy@cappuchino.xyz>"]
 license = "MIT"
 build = "build.rs"
 
@@ -13,9 +13,9 @@ name = "libsolv_sys"
 path = "src/lib.rs"
 
 [dependencies]
-libc = "0.2"
+libc = "0.2.126"
 
 [build-dependencies]
-cc = { version = "1.0", features = ["parallel"] }
+cc = { version = "1.0.73", features = ["parallel"] }
 pkg-config = "0.3"
-bindgen = "0.47"
+bindgen = "0.60.1"
